# lane_merging_experiment

./: Cargo.toml
experiment/: exp.py  log_0.1.json  log_0.2.json  log_0.3.json  log_0.4.json  log_0.5.json  max_delay.eps  max_delay_without_sa.eps  mean_delay.eps  plot.py  t_last.eps
src/: main.rs  report.rs  scheduler.rs  traffic_gen.rs
