[package]
name = "lane_merging_experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
